<resources>
    <string name="app_name">Destiny</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="class_name">Class: %1$s</string>
    <string name="attack_type">Attack Type: %1$s</string>
    <string name="experience">Experience: %1$d</string>
    <string name="attack">Attack: \t%1$d</string>
    <string name="magical_resistance">Magical Resistance: \t%1$d</string>
    <string name="physical_resistance">Physical Resistance: \t%1$d</string>
    <string name="max_health">Max health: \t%1$d</string>
    <string name="crit_rate">Crit Rate: \t%1$d%%</string>
    <string name="victories">Victories: \t%1$d</string>
    <string name="total_battles">Total Battles: \t%1$d</string>
    <string name="assassin_special">Bleed: Applies bleed to enemy, which reduces their HP over time. Increases crit rate by 30%. Effect lasts for 3 turns.\nCooldown: 5 turns</string>
    <string name="berserker_special">Frenzy: Reduces resistances to 0 and increases ATK based off of reduced resistance for 3 turns.\nCooldown: 5 turns</string>
    <string name="knight_special">Heavy blow: Powerful attack.\nCooldown: 3 turns</string>
    <string name="mage_special">Enhance: Buffs ATK and resistances for 3 turns.\nCooldown: 4 turns</string>
    <string name="paladin_special">Block: Blocks incoming attacks for a turn.\nCooldown: 4 turns</string>
    <string name="warlock_special">Life Steal: Deals a weak attack and in return heals the warlock.\nCooldown: 2 turns</string>

</resources>